--- a/_html/index.html
+++ b/_html/index.html
@@ -9,15 +9,14 @@
     <title>Video | Reconhecimento FaceAp</title>
 </head>
 <body>
+
     <video 
         autoplay 
         muted
-        id="cam" 
-        width="700"
-        height="560">
+        id = "cam" 
+        width = 700
+        height = 560>
     </video>
-    
-    <script src="../_js/index.js"></script>
-    
+    <script src="../_js/index.js"></script> 
 </body>
 </html>
